--- a/content/post/19062020.md
+++ b/content/post/19062020.md
@@ -9,4 +9,4 @@ author: Melina Cano
 En la sexta sesión ordinaria, la Cámara de Senadores convirtió en Ley a la creación del Órgano de Revisión de Salud Mental y Adicciones (ORSMA), y media sanción en revisión a la incorporación del Acoso Sexual Callejero al Código de Faltas de la Provincia.
 De igual manera, aprobó dos proyectos de resolución y dio media sanción a importantes proyectos de Ley. 
 
-![6ta sesión](/img/recinto.jpg "6ta sesión")
+![6ta sesión](/img/recinto.jpg)
