--- a/content/post/07032020.md
+++ b/content/post/07032020.md
@@ -7,4 +7,4 @@ author: Melina Cano
 ---
 **Octava sesión** Este jueves, en una nueva sesión ordinaria aprobamos cinco leyes promovidas por el Senado, Diputados y Poder Ejecutivo. Asimismo, se dio acuerdo a dos pliegos para el nombramiento de cargos judiciales.
 
-![Sesionando](/img/sesionando.jpg "sesionando")
+![Sesionando](/img/sesionando.jpg)
