--- a/content/post/17072020.md
+++ b/content/post/17072020.md
@@ -2,7 +2,7 @@
 title: "Novena sesión del Senado"
 date: 2020-07-17T17:51:48-03:00
 archives: "2020"
-tags: [Sesión, Creación e Integración del Consejo de la Magistratura]
+tags: [Sesión, Magistratura]
 author: Melina Cano
 ---
 **NOVENA SESIÓN DEL SENADO** 
