Camino El Tolar 2

--- a/content/post/21082020.md
+++ b/content/post/21082020.md
@@ -10,4 +10,4 @@ En la decimotercera sesión del Senado reiteramos el pedido de proyectos present
 Con el cumplimiento efectivo de los agentes dispuestos para Belén, apuntamos al cumplimiento del Proyecto que solicita la obra de construcción del camino a El Tolar, aprobado el 6 de septiembre de 2018. 
 Necesitamos un nuevo impulso a este proyecto que nos permitirá sacar del aislamiento a estas comunidades.
 
-![camino a El Tolar](/img/CaminoElTolar.mp4)
+![camino a El Tolar](/img/sesionando.jpg)
