--- a/content/post/21082020.md
+++ b/content/post/21082020.md
@@ -2,7 +2,7 @@
 title: "REITERAMOS EL PEDIDO DEL CAMINO A EL TOLAR"
 date: 2020-08-21T20:15:29-03:00
 archives: "2020"
-tags: [el tolar]
+tags: ["el tolar"]
 author: Melina Cano
 ---
 **REITERAMOS EL PEDIDO DEL CAMINO A EL TOLAR**
@@ -10,4 +10,4 @@ En la decimotercera sesión del Senado reiteramos el pedido de proyectos present
 Con el cumplimiento efectivo de los agentes dispuestos para Belén, apuntamos al cumplimiento del Proyecto que solicita la obra de construcción del camino a El Tolar, aprobado el 6 de septiembre de 2018. 
 Necesitamos un nuevo impulso a este proyecto que nos permitirá sacar del aislamiento a estas comunidades.
 
-![camino a El Tolar](/img/sesionando.jpg)
+![Camino El Tolar](/img/sesionando.jpg "Camino El Tolar")
