--- a/content/post/18102020.md
+++ b/content/post/18102020.md
@@ -1,11 +1,11 @@
 ---
-title: "EXELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE"
+title: "EXCELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE"
 date: 2020-10-16T20:37:23-03:00
 archives: "2020"
 tags: [YMAD ECSAPEM]
 author: Melina Cano
 ---
-**EXELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE**
+**EXCELENTE NOTICIA PARA EL DEPATAMENTO BELÉN Y EL OESTE**
 
 Orgulloso de ser parte de YMAD y celebrar su 62º aniversario con un convenio junto a EC Sapem, por el cual proveeremos de más energía a los ciudadanos del norte de Belén a partir del nuevo tendido eléctrico entre Alumbrera y Farallón Negro. Seguimos trabajando junto al Gobierno de la Provincia.
 
